tests/neg-macros/i9014.check
-- Error: tests/neg-macros/i9014/Test_2.scala:1:18 ---------------------------------------------------------------------
1 |val tests = summon[Bar] // error
  |            ^^^^^^^^^^^
  |            Failed to expand!
